--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Task-1 @ShivInfotech</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./Assests/css/style.css">
@@ -20,9 +20,9 @@
             <span><i class="bi bi-envelope"></i> Contact@gmail.com</span>
           </div>
           <div class="socials">
-            <a href="#" class="me-2"><i class="bi bi-facebook"></i></a>
-            <a href="#" class="me-2"><i class="bi bi-twitter"></i></a>
-            <a href="#"><i class="bi bi-instagram"></i></a>
+            <a href="#" class="me-2"><i class="bi bi-facebook" style="color: orange;"></i></a>
+            <a href="#" class="me-2"><i class="bi bi-twitter" style="color: orange;"></i></a>
+            <a href="#"><i class="bi bi-instagram" style="color: orange;"></i></a>
           </div>
         </div>
       </div>
@@ -61,9 +61,9 @@
         </div>
       </nav>
 
-      <div class="hero-section text-center d-flex align-items-center" style="background-image: url('./Assests/images/hero-banner.jpg'); height: 72vh; background-size: cover; background-position: center; position: relative;">
+      <div class="hero-section text-center d-flex align-items-center" style="background-image: url('./Assests/images/hero-banner.jpg'); height: 72vh; background-size: cover; background-position: center; position: relative; margin: 0; padding: 0;">
         <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.5);"></div>
-        <div class="container" style="position: relative; z-index: 1;">
+        <div class="container-fluid" style="position: relative; z-index: 1; padding-left: 0; padding-right: 0;">
           <h1 class="display-4" style="color: white; font-weight: bold;">BUILDING YOUR DREAM</h1>
           <p class="lead" style="color: white;">We Can Build Anything You Want</p>
           <a href="#" class="btn btn-md" style="background-color: orange; color: white; font-size: 12px; font-weight: 500;">OUR PROJECT</a>
@@ -293,7 +293,7 @@
         <div class="head d-flex justify-content-center">
         <h2 class="text-center" style="color: black; font-weight: 500; border-bottom: 2px solid orange; padding-bottom: 5px;width: fit-content;">Latest News</h2>
     </div>
-        <div class="col-md-8">
+        <div class="col-md-7" style="margin-left: 120px;" id="news">
           <h2 id="top5" class="mb-3" style="font-size: 2rem; color: #333;">Top 5 Construction Blog:</h2>
           <p class="text-muted" style="font-size: 0.9rem;">
             <i class="fas fa-calendar-alt"></i> Date: January 1, 2023
@@ -306,35 +306,35 @@
           <ul class="list-unstyled">
             <li class="mb-4">
               <img src="https://th.bing.com/th/id/OIP.C-mKnefKKTi1Cp9-YJJQWwHaDt?rs=1&pid=ImgDetMain" alt="Blog 1 Image" class="img-fluid rounded shadow-sm mb-2" height="100" width="150">
-              <h4 style="color: #007bff;">Burj Khalifa</h4>
+              <h4 style="color: orange">Burj Khalifa</h4>
               <p class="text-muted" style="font-size: 0.9rem;">
                 <i class="fas fa-calendar-alt"></i> Date: January 2, 2023 | Comments: 5
               </p>
               <p>Short description of blog 1.</p>
-              <a href="#" class="text-primary">Read More</a>
+              <a href="#" class="text-primaryi">Read More</a>
             </li>
             <li class="mb-4">
               <img src="https://assets-global.website-files.com/657a7e2fb2be2bd0f1ee3d54/657fbf94145e6b58c948509b_Metal-Engineering.webp" alt="Blog 2 Image" class="img-fluid rounded shadow-sm mb-2" height="100" width="150">
-              <h4 style="color: #007bff;">Antelia</h4>
+              <h4 style="color: orange;">Antelia</h4>
               <p class="text-muted" style="font-size: 0.9rem;">
                 <i class="fas fa-calendar-alt"></i> Date: January 3, 2023 | Comments: 3
               </p>
               <p>Short description of blog 2.</p>
-              <a href="#" class="text-primary">Read More</a>
+              <a href="#" class="text-primaryi">Read More</a>
             </li>
           </ul>
         </div>
       </div>
 
       <div class="container">
-        <div class="row align-items-center">
+        <div class="row align-items-center ">
           <div class="col-md-6">
             <h3 style="color: #333;">WE BUILD YOUR DREAM PROJECT</h3>
             <p class="text-muted">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptates praesentium amet non qui veritatis minima blanditiis aperiam, fugit veniam laudantium.</p>
             <a href="#" class="btn btn-md" style="background-color: orange; color: white; width: fit-content;">Learn More</a>
           </div>
           <div class="col-md-6">
-            <img src="./Assests/images/worker.png" alt="Exciting Developments" class="img-fluid" style="max-width: 100%; height: auto;">
+            <img src="https://media.istockphoto.com/id/1182518914/photo/handsome-worker-showing-thumbs-up-sigh.jpg?s=612x612&w=0&k=20&c=9VlERawNjSOGFWy2x-JMexsyQDJuqAcYPXa4v9r7gCk=" alt="Exciting Developments" class="img-fluid" width="300px">
           </div>
         </div>
       </div>
