--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
         <div class="head d-flex justify-content-center">
         <h2 class="text-center" style="color: black; font-weight: 500; border-bottom: 2px solid orange; padding-bottom: 5px;width: fit-content;">Latest News</h2>
     </div>
-        <div class="col-md-7" style="margin-left: 120px;" id="news">
+        <div class="col-md-7"  id="news">
           <h2 id="top5" class="mb-3" style="font-size: 2rem; color: #333;">Top 5 Construction Blog:</h2>
           <p class="text-muted" style="font-size: 0.9rem;">
             <i class="fas fa-calendar-alt"></i> Date: January 1, 2023
